RESOLVED FIXED216622
AudioBufferSourceNode.start() behavior is incorrect when offset is past the end of the buffer
https://bugs.webkit.org/show_bug.cgi?id=216622
Summary AudioBufferSourceNode.start() behavior is incorrect when offset is past the e...
Chris Dumez
Reported 2020-09-16 14:38:40 PDT
AudioBufferSourceNode.start() behavior is incorrect when offset is past the end of the buffer. We are supposed to output silence. However, in order implementation, we were just resetting the offset to 0, playing the buffer from the beginning.
Attachments
Patch (7.47 KB, patch)
2020-09-16 14:43 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-09-16 14:43:21 PDT
Geoffrey Garen
Comment 2 2020-09-16 15:13:16 PDT
Comment on attachment 408957 [details] Patch r=me
EWS
Comment 3 2020-09-16 15:43:19 PDT
Committed r267169: <https://trac.webkit.org/changeset/267169> All reviewed patches have been landed. Closing bug and clearing flags on attachment 408957 [details].
Radar WebKit Bug Importer
Comment 4 2020-09-16 15:44:16 PDT
Note You need to log in before you can comment on or make changes to this bug.