AudioBufferSourceNode.start() behavior is incorrect when offset is past the end of the buffer https://bugs.webkit.org/show_bug.cgi?id=216622

Reviewed by Geoffrey Garen.

LayoutTests/imported/w3c:

Rebaseline test that is now passing.

* web-platform-tests/webaudio/the-audio-api/the-audiobuffersourcenode-interface/audiobuffersource-start-expected.txt:

Source/WebCore:

AudioBufferSourceNode.start() behavior is incorrect when offset is past the end of the buffer. We
are supposed to output silence. However, in order implementation, we were just resetting the offset
to 0, playing the buffer from the beginning.

To address the issue, I have dropped the logic that would reset the read offset if past the end of
the buffer.

No new tests, rebaselined existing test.

* Modules/webaudio/AudioBufferSourceNode.cpp:
(WebCore::AudioBufferSourceNode::renderFromBuffer):

(WebCore::AudioBufferSourceNode::startPlaying):
Drop dead code since m_isGrain is always true in this function.


Canonical link: https://commits.webkit.org/229444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267169 268f45cc-cd09-0410-ab3c-d52691b4dbfc